<resources>
    <string name="app_name" translatable="false">Essteling</string>
    <string name="manualtitle">Handleiding</string>
    <string name="manualcontent">Er zijn vijf knoppen en één slider waarmee u de wagen kan besturen. \nDe vier knoppen met pijlen gebruikt u om uw voertijg zijn richting te besturen. \nDe stop knop in het midden kan u gebruiken om de wagen onmiddelijk te laten stoppen. \nDe slider rechts gebruikt u om de snelheid te bepalen van het voertuig. \nWij hopen dat u veel plezier heeft in de Esstelleague!</string>
    <string name="darkthemetitle">Donker thema</string>
    <string name="hintstitle">Hints</string>
    <string name="soundtitle">Geluid</string>
    <string name="languagetitle">Taal</string>
    <string name="aboutustitle">Over ons</string>
    <string name="huidige_wedstrijden">Huidige wedstrijden</string>
    <string name="nieuws">Nieuws</string>
    <string name="logo">logo</string>
    <string name="yeet" translatable="false">yeet</string>
    <string name="hoe_werkt_dit">hoe werkt dit</string>
    <string name="logorond">logorond</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="play">Speel</string>
    <string name="essteling_logo" translatable="false">Essteling_logo</string>
    <string name="button">Knop</string>
    <string name="welkom_bij_de_esseteleague">welkom bij de Esseteleague</string>
    <string name="welkom_bij_de_essteleague_ga_ten_strijde_met_u_favoriete_sprookjes_characters_over_de_uikom_van_het_verhaal_selecteer_u_character_en_zorg_ervoor_dat_het_sprookje_goed_afloop">welkom bij de Essteleague. ga ten strijde met U favoriete sprookjes characters over de uikom van het verhaal. selecteer U character en zorg ervoor dat het sprookje goed afloopt.</string>
    <string name="yeetus_deletus" translatable="false">YEETUS DELETUS</string>
    <string name="neem_controle_over_1_van_onze_sprookjes_auto_s_en_bepaal_hoe_het_verhaal_zich_verder_verloop">neem controle over 1 van onze sprookjes auto\'s en bepaal hoe het verhaal zich verder verloop.</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="neem_controle_over_1_van_onze_sprookjes_auto_s_en_bepaal_hoe_het_verhaal_zich_verder_afspeel_in_dit_interactieve_autospel">Neem controle over 1 van onze sprookjes auto’s en bepaal hoe het verhaal zich verder afspeel in dit interactieve autospel.</string>
    <string name="baron" translatable="false">Baron</string>
    <string name="bob" translatable="false">Bob</string>
    <string name="dezwevendebelg" translatable="false">De Zwevende Belg</string>
    <string name="droomvlucht" translatable="false">Droomvlucht</string>
    <string name="fatamorgana" translatable="false">Fata Morgana</string>
    <string name="festivaloveral" translatable="false">Festival Overal</string>
    <string name="johanendeeenhoorn" translatable="false">Johan en de Eenhoorn</string>
    <string name="monsieurcannibale" translatable="false">Monsieur Cannibale</string>
    <string name="python" translatable="false">Python</string>
    <string name="symbolica" translatable="false">Symbolica</string>
    <string name="vogelrok" translatable="false">Vogelrok</string>

    <string name="aboutuscontent" translatable="false">Wij zijn een studententeam in dienst van de Essteling, gehuurd om voor de Essteling een applicatie te maken. \nDeze applicatie is de Esstelleague, gemaakt om de wachtrij toch net iets interessanter te maken. \n \nOns team bestaat uit: \nGroepsleider - Tom Kaasenbrood \nCode-beheerder - Lucas Prins \nSecretaris - Dustin Hendriks \nEvaluator - Daphne Boulhouwers \nPlanner - Pascal de Bruijn \n \n Wij hebben dit project gemaakt voor de opdracht: \'Maak een applicatie die mensen in de Essteling meer laat interacteren met elkaar en de omgeving\'. \nUiteindelijk hebben wij gekozen voor de Esstelleague omdat wij dit idee het interessantst vonden. \nWij konden met dit idee zowel veel aan de hardware als de software doen, hierdoor hebben we erg veel geleerd gedurende het project. \n \nWe hopen dat je de app goed vindt, feedback kan verstuurd worden naar: \'support.esstelleague@essteling.nl\'</string>
</resources>
