<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/darkThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/darkThemeTitleText"
            app:layout_constraintTop_toBottomOf="@+id/manualContentText" />

        <Switch
            android:id="@+id/hintsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/darkThemeSwitch"
            app:layout_constraintTop_toBottomOf="@+id/darkThemeSwitch" />

        <TextView
            android:id="@+id/darkThemeTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/darkthemetitle"
            android:textColor="?attr/textcolor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/darkThemeSwitch" />

        <TextView
            android:id="@+id/hintsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintstitle"
            android:textColor="?attr/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/darkThemeTitleText"
            app:layout_constraintTop_toTopOf="@+id/hintsSwitch" />

        <TextView
            android:id="@+id/manualContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/manualcontent"
            android:textColor="?attr/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manualTitleText" />

        <Button
            android:id="@+id/aboutUsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aboutustitle"
            android:textColor="?attr/textcolor"
            app:layout_constraintEnd_toEndOf="@+id/soundSwitch"
            app:layout_constraintStart_toStartOf="@+id/soundTitleText"
            app:layout_constraintTop_toBottomOf="@+id/languageTitleText" />

        <Switch
            android:id="@+id/soundSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/hintsSwitch"
            app:layout_constraintTop_toBottomOf="@+id/hintsSwitch" />

        <TextView
            android:id="@+id/languageTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languagetitle"
            android:textColor="?attr/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/soundTitleText"
            app:layout_constraintTop_toTopOf="@+id/languageSelecterSpinner" />

        <Spinner
            android:id="@+id/languageSelecterSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/soundSwitch"
            app:layout_constraintTop_toBottomOf="@+id/soundSwitch" />

        <TextView
            android:id="@+id/manualTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/manualtitle"
            android:textColor="?attr/textcolor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/soundTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soundtitle"
            android:textColor="?attr/textcolor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/hintsTitleText"
            app:layout_constraintTop_toTopOf="@+id/soundSwitch" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>