<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Placeholde_Essteleague_logo"
                android:layout_width="232dp"
                android:layout_height="189dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="90dp"
                android:contentDescription="@string/essteling_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/essteling_logo" />

            <TextView
                android:id="@+id/Essteleague_story"
                android:layout_width="0dp"
                android:layout_height="88dp"
                android:layout_marginTop="24dp"
                android:text="@string/welkom_bij_de_essteleague_ga_ten_strijde_met_u_favoriete_sprookjes_characters_over_de_uikom_van_het_verhaal_selecteer_u_character_en_zorg_ervoor_dat_het_sprookje_goed_afloop"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Placeholde_Essteleague_logo" />

            <Button
                android:id="@+id/Play_button"
                android:layout_width="233dp"
                android:layout_height="185dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:text="@string/play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Essteleague_story"
                android:focusable="true" />

            <TextView
                android:id="@+id/informatie_over_Essteleague"
                android:layout_width="279dp"
                android:layout_height="143dp"
                android:layout_marginTop="20dp"
                android:text="@string/neem_controle_over_1_van_onze_sprookjes_auto_s_en_bepaal_hoe_het_verhaal_zich_verder_afspeel_in_dit_interactieve_autospel"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Play_button" />

            <ImageView
                android:id="@+id/Essteling_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="126dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="105dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informatie_over_Essteleague"
                app:srcCompat="@drawable/essteling_logo"
                android:contentDescription="@string/todo" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>